@@ -1,5 +1,10 @@
 2004-12-08  Bruno Haible  <bruno@clisp.org>
 
+	* foreign.d (SET-FOREIGN-POINTER): Fix GC-safety bug introduced on
+	2003-03-14.
+
+2004-12-08  Bruno Haible  <bruno@clisp.org>
+
 	* list.d (list_length): Mark as "can trigger GC". Fix GC-safety bug
 	introduced on 2004-02-17.
 
